tests/baselines/reference/parserVariableDeclaration10.errors.txt
parserVariableDeclaration10.ts(1,6): error TS1009: Trailing comma not allowed.


==== parserVariableDeclaration10.ts (1 errors) ====
    var a,;
         ~
!!! error TS1009: Trailing comma not allowed.